--- a/style.css
+++ b/style.css
@@ -1,6 +1,5 @@
 @import url('https://fonts.googleapis.com/css2?family=Oswald:wght@200..700&display=swap');
 
-
 * {
     margin: 0;
     padding: 0;
@@ -327,6 +326,7 @@ title::after {
     padding-bottom: 0;
 }
 
+
 .half {
     display: flex;
     align-items: center;
@@ -402,4 +402,51 @@ h2 {
     }
 }
 
+.partidos {
+    display: block;
+    justify-content: center;
+    align-items: center;
+    flex-wrap: wrap;
+    text-align: center;
+    gap: 20px;
+    margin-top: 20px;
+}
 
+.partido {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    flex-direction: column;
+    padding: 40px 0;
+    margin-top: 20px;
+    background-color: var(--primary-color);
+    border-radius: var(--border-radius-s);
+    color: var(--white-color);
+    width: 80%;
+    margin-left: 10%;
+    box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
+    transition: transform 0.3s ease, box-shadow 0.3s ease;
+}
+
+.partido:hover {
+    transform: scale(1.05);
+    box-shadow: 0 0 15px rgba(0, 0, 0, 0.2);
+}
+
+.partido h3 {
+    font-size: var(--font-size-m);
+    margin-bottom: 20px;
+    font-weight: var(--font-weight-normal);
+}
+
+.partido p {
+    font-size: var(--font-size-xxl);
+    margin-bottom: 10px;
+    font-weight: var(--font-weight-semi-bold);
+}
+
+
+.partidos .h2 {
+    font-size: var(--font-size-xxl);
+    margin-bottom: 50px;
+}
